fix: console box overflow

--- a/src/content/netease/components/console/console.less
+++ b/src/content/netease/components/console/console.less
@@ -12,5 +12,6 @@
     width: 100%;
     height: 100%;
     padding: 12px;
+    box-sizing: border-box;
   }
 }
